<resources>
    <string name="app_name">ZeniAfrik</string>
    <string name="title_activity_example">Example</string>
    <string name="login_via_facebook">Continue with Facebook</string>
    <string name="login_via_google">Continue with Google+</string>
    <string name="phone">Phone number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_intro">Log in to manage your products</string>
    <string name="register_intro">Register to sell your products</string>
    <string name="confirm_password">Confirm password</string>
    <string name="email_address">Email address</string>
    <string name="brand_label">Fashion Label / Brand Name</string>
    <string name="become_a_member">Become a member</string>
    <string name="tnc">By registering you accept our terms and conditions.</string>
    <string name="already_a_member">Already a member</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="register">Register</string>
    <string name="register_with_email_address">Register with phone number</string>
    <string name="provide_your_account_email_address_to_continue">Provide your account email address to continue.</string>
    <string name="reset_account_password">Reset Account Password</string>
    <string name="continue_t">Continue</string>
    <string name="provide_valid_information_for_the_fields_below">Provide valid information for the fields below.</string>
    <string name="account_registration">Account Registration</string>
    <string name="browse">Browse</string>
    <string name="profile">Profile</string>
    <string name="feed">Feed</string>
    <string name="category">Category</string>
    <string name="account">Account</string>
    <string name="search">Search</string>
    <string name="cart">Cart</string>
    <string name="view_all">View all</string>
    <string name="popular">Popular</string>
    <string name="new_products">New Products</string>
    <string name="recommended">Recommended</string>
    <string name="view_more">View more</string>
    <string name="retry">Retry</string>
    <string name="cat_caption">The best fashion and creative arts products from Africa</string>
    <string name="browse_by_category">Browse Category</string>
    <string name="share_product_to_friends">Share product to friends</string>
    <string name="call_seller">Place Order</string>
    <string name="reviews_and_rating">reviews and rating</string>
    <string name="ghc">Ghc</string>
    <string name="about_product">About Product</string>
    <string name="description">Description</string>
    <string name="my_profile">My Shop</string>
    <string name="faq">FAQ</string>
    <string name="contact_us">Contact Us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="buyer_pro">Buyer Protection</string>
    <string name="share_app">Share App</string>
    <string name="rate_app">Rate App</string>
    <string name="please_wait">Please wait…</string>
    <string name="valid_gh_number_prompt">Provide a valid Ghana number</string>
    <string name="invalid_password_prompt">Password is at least 8 characters</string>
    <string name="similar_products">More Ads</string>
    <string name="filter">Filter</string>
    <string name="fashion_min_error">Fashion label must be at least 3 characters</string>
    <string name="valid_email_prompt">Provide a valid email address.</string>
    <string name="password_min_prompt">Password should be at least 8 characters</string>
    <string name="password_not_match_prompt">Passwords did not match</string>
    <string name="colors">Colors</string>
    <string name="size">Size</string>
    <string name="this_product_has_been_verified_by_zeniafrik_for_quality_and_it_s_100_buyer_safe">This product has been verified by ZeniAfrik for quality and it\'s 100% buyer safe.</string>
    <string name="verified_image">verified image</string>
    <string name="product_url">http://www.zeniafrik.com/product/%s/</string>
    <string name="share_content">I think you\'ll like %1$s\nCheck it out.\n\n%2$s</string>
    <string name="share_title">Share Product</string>
    <string name="url_privacy_policy">privacy-policy</string>
    <string name="title_privacy_policy">Privacy Policy</string>
    <string name="url_tou">terms-of-use</string>
    <string name="title_tou">Terms of Use</string>
    <string name="url_b_pro">buyer-protection</string>
    <string name="title_b_pro">Buyer Protection</string>
    <string name="membership">Member since %s</string>
    <string name="oops_nothing_found_here">Oops, nothing found here!</string>
    <string name="share_app_content">Hi check out ZeniAfrik, they have the best original African crafts and fashion goods and accessories, you can either buy or sell on their platform.\n\nVisit http:\\\\zeniafrik.com\\</string>
    <string name="action_settings">Settings</string>
    <string name="upgrade_account_to_premium">GET STARTED</string>
    <string name="personal_information">Personal Information</string>
    <string name="account_level">Account Level</string>
    <string name="contact">Contact</string>
    <string name="update_personal_info">Update Shop Info</string>
    <string name="location">Location</string>
    <string name="orders">Orders</string>
    <string name="feeds_amp_events"><![CDATA[Feeds & Events]]></string>
    <string name="what_s_happening_in_the_world_of_creative_arts_and_fashion_today">What\'s happening in the world of creative arts and fashion!</string>
    <string name="basic">Basic</string>
    <string name="statistics">Statistics</string>
    <string name="oops">Oops!</string>
    <string name="you_haven_t_posted_any_ad_yet">You haven\'t posted any ad yet.</string>
    <string name="posted_ads">Posted Ads</string>
    <string name="select_category">Select Category</string>
    <string name="product_name">Product Name</string>
    <string name="close">Close</string>
    <string name="alert_success_type">Success</string>
    <string name="post_ad">Post Ad</string>
    <string name="change">Change</string>
    <string name="selected_category">Selected Category</string>
    <string name="ad_details">Ad Details</string>
    <string name="price">Price</string>
    <string name="something_went_wrong">Something went wrong, please try again later.</string>
    <string name="extra_description">Extra Description</string>
    <string name="upload_maximum_of_3_photos">Select minimum of 1 photo.</string>
    <string name="any_color">red, blue, green, yellow, any</string>
    <string name="any_size">sm,md,l,xl,xl,8–9.5,32–42,any</string>
    <string name="ad_target_group">Ad Target Group</string>
    <string name="by_clicking_post_ad_you_accept_our_terms_of_use">By clicking post ad, you accept our terms of use.</string>
    <string name="everyone">Everyone</string>
    <string name="you_need_to_complete_your_profile_information_now">You need to complete your profile information now!</string>
    <string name="get_amazing_features_like_n1_customized_shop_n2_real_time_ad_analytics_nand_many_more">Get amazing features like,\n1. Customized shop\n2.Real-time Ad Analytics\nand many more!</string>
    <string name="upgrade_to_premium_today">Upgrade To Premium Today</string>
    <string name="ad_created_success">Ad was created successfully, ad will be live as soon as we are done with review.</string>
    <string name="_1">1</string>
    <string name="increase_order_quantity">increase order quantity</string>
    <string name="decrease_order_quantity">decrease order quantity</string>
    <string name="billing_information">Billing Information</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="address">Address</string>
    <string name="use_this_billing_information_for_my_next_orders">Use this billing information for my next orders.</string>
    <string name="order_remarks">Order Remarks</string>
    <string name="cancel">Cancel</string>
    <string name="submit_order">Submit Order</string>
    <string name="complete_oder">Complete Order</string>
    <string name="quantity">Quantity</string>
    <string name="order_total">Order Total</string>
    <string name="optional_information">Optional Information</string>
    <string name="order_message">We are processing your order, you will receive a call from a representative within the next 24 hours to complete your order.</string>
    <string name="valid_address">Provide a descriptive address, Eg. GP GPS AK-10010</string>
    <string name="ghana_cedi">Ghc %s</string>
    <string name="f_n_n_l_n_required">First and last name is required</string>
    <string name="order_cancel_question">Still want to complete this order?</string>
    <string name="browser_by_region_amp_city"><![CDATA[Browse by Region & City]]></string>
    <string name="search_for_ads_near_you">Search for ads near you</string>
    <string name="more_search_filter">More search filter</string>
    <string name="min_price">Min Price</string>
    <string name="max_price">Max Price</string>
    <string-array name="gender_select_array">
        <item>Everyone</item>
        <item>Male</item>
        <item>Female</item>
        <item>Kids</item>
    </string-array>
    <string-array name="gh_regions_array">
        <item>All Regions</item>
        <item>Ashanti</item>
        <item>Brong Ahafo</item>
        <item>Central</item>
        <item>Eastern</item>
        <item>Greater Accra</item>
        <item>Northern</item>
        <item>Upper East</item>
        <item>Upper West</item>
        <item>Volta</item>
        <item>Western</item>
    </string-array>
</resources>
