<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

        <TextView
            style="@style/ZeniAfrik.TextView.Large"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/account_registration" />

        <TextView
            style="@style/ZeniAfrik.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/provide_valid_information_for_the_fields_below"
            android:textAlignment="center" />

        <EditText
            android:id="@+id/name_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_person"
            android:drawableStart="@drawable/ic_person"
            android:drawableTint="#616161"
            android:hint="@string/brand_label"
            android:inputType="textCapWords"
            android:maxLength="50" />

        <EditText
            android:id="@+id/phone_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            android:drawableTint="#616161"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="10" />


        <EditText
            android:id="@+id/email_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_mail"
            android:drawableStart="@drawable/ic_mail"
            android:drawableTint="#616161"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress" />


        <EditText
            android:id="@+id/password_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="#616161"
            android:hint="@string/password"
            android:inputType="textPassword" />


        <EditText
            android:id="@+id/password_confirmation_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="#616161"
            android:hint="@string/confirm_password"
            android:inputType="textPassword" />


        <TextView
            android:id="@+id/tns"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/tnc"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/register_button"
            style="@style/ZeniAfrik.Button"
            android:layout_width="120dp"
            android:layout_height="40dp"
            android:layout_marginTop="16dp"
            android:text="@string/register" />

    </LinearLayout>
</ScrollView>