<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@android:color/white"
    android:orientation="vertical">

    <TextView
        style="@style/ZeniAfrik.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_account_password"
        android:textSize="22sp" />

    <TextView
        style="@style/ZeniAfrik.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/provide_your_account_email_address_to_continue"
        android:textAlignment="center" />

    <EditText
        android:id="@+id/reset_email_input"
        style="@style/ZeniAfrik.Input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/ic_mail"
        android:drawableStart="@drawable/ic_mail"
        android:drawableTint="#616161"
        android:focusable="true"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress" />

    <Button
        android:id="@+id/reset_button"
        style="@style/ZeniAfrik.Button"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:text="@string/continue_t" />
</LinearLayout>