<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">

    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#dcffffff"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="32dp">

        <ImageView
            android:src="@drawable/alo"
            android:layout_gravity="center"
            android:tint="@color/colorPrimaryDark"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"/>
        <TextView
            style="@style/ZeniAfrik.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/login_intro"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/phone_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableStart="@drawable/ic_phone"
            android:drawableTint="#616161"
            android:hint="@string/phone"
            android:inputType="number"
            android:maxLength="10" />

        <EditText
            android:id="@+id/password_input"
            style="@style/ZeniAfrik.Input"
            android:drawableLeft="@drawable/ic_lock"
            android:drawableStart="@drawable/ic_lock"
            android:drawableTint="#616161"
            android:hint="@string/password"
            android:inputType="textPassword" />



        <TextView
            android:id="@+id/forgot_password"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/colorPrimaryDark" />

        <Button
            android:id="@+id/login_button"
            style="@style/ZeniAfrik.Button"
            android:layout_marginTop="16dp"
            android:text="@string/login"
            android:textAppearance="@style/ZeniAfrik.TextView" />

        <TextView
            android:id="@+id/open_register"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/become_a_member"
            android:textColor="@color/colorPrimaryDark" />

    </LinearLayout>
</ScrollView>