<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"

    android:background="@android:color/white"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_margin="16dp"
    tools:showIn="@layout/personal_summary_component">

    <TextView
        android:drawableTop="@drawable/gold"
        style="@style/ZeniAfrik.TextView.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_to_premium_today"
        android:textAlignment="center"
        android:textColor="#c98716"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        style="@style/ZeniAfrik.TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/get_amazing_features_like_n1_customized_shop_n2_real_time_ad_analytics_nand_many_more"
        android:textAlignment="center" />

    <Button
        android:id="@+id/upgrade_premium"
        style="@style/Widget.AppCompat.Button.Borderless.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upgrade_account_to_premium"
        android:textAppearance="@style/ZeniAfrik.TextView"
        android:textColor="#c98716" />
</LinearLayout>