<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_marginBottom="16dp"
            android:background="@color/colorPrimaryDark"
            android:paddingBottom="16dp">

            <ImageView
                android:id="@+id/user_image"
                android:layout_width="95dp"
                android:layout_height="95dp"
                android:layout_centerInParent="true"
                android:src="@drawable/alo" />
        </RelativeLayout>

        <TextView
            android:id="@+id/mp_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_account"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/my_profile" />

        <TextView
            android:id="@+id/order_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_basket"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/orders" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#dbdbdb" />


        <TextView
            android:id="@+id/faq_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_faq"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/faq" />

        <TextView
            android:id="@+id/cu_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_contact"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/contact_us" />


        <TextView
            android:id="@+id/pp_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawableLeft="@drawable/ic_privacy"
            android:drawablePadding="16dp"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/privacy_policy" />

        <TextView
            android:id="@+id/tou_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_t_o_u"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/terms_of_use" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.2dp"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="8dp"
            android:background="#dbdbdb" />


        <TextView
            android:id="@+id/bp_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_buyer_pro"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/buyer_pro" />

        <TextView
            android:id="@+id/share_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_share"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/share_app" />


        <TextView
            android:id="@+id/rate_btn"
            style="@style/ZeniAfrik.TextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackground"
            android:clickable="true"
            android:drawablePadding="16dp"
            android:drawableStart="@drawable/ic_star_full"
            android:focusable="true"
            android:gravity="center_vertical"
            android:padding="8dp"
            android:text="@string/rate_app" />
    </LinearLayout>
</ScrollView>