<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none">


    <LinearLayout
        android:id="@+id/form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#DCffffff"
        android:orientation="vertical"
        android:paddingBottom="16dp"
        android:paddingTop="48dp">

        <ImageView
            android:src="@drawable/alo"
            android:layout_gravity="center"
            android:tint="@color/colorPrimaryDark"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            style="@style/ZeniAfrik.TextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="32dp"
            android:text="@string/register_intro"
            android:textSize="22sp"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Button
            android:id="@+id/open_register"
            style="@style/ZeniAfrik.Button"
            android:layout_marginTop="16dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/register_with_email_address" />

        <TextView
            style="@style/ZeniAfrik.TextView"
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:clickable="true"
            android:focusable="true"
            android:padding="8dp"
            android:text="@string/already_a_member"
            android:textColor="@color/colorPrimaryDark" />
    </LinearLayout>


</ScrollView>
